methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:6: error: not found: type Bool
    var resulat:Bool = (getCouleurSol == Color.green) ;
                ^SlugTracking:8: error: not found: value resultat
    return resultat ;
           ^